# movemaker

./: .gitignore  README.md  config.example.yaml  gpu.sh  pyproject.toml
docs/superpowers/plans/: 2026-07-18-movie-shorts-cli-mvp.md  2026-07-19-adaptive-background-music.md  2026-07-19-cuda-compute-type.md  2026-07-19-fast-candidates-progress.md  2026-07-19-grouped-karaoke-subtitles.md  2026-07-19-skip-outro.md
docs/superpowers/specs/: 2026-07-18-movie-shorts-cli-design.md  2026-07-19-adaptive-background-music-design.md  2026-07-19-cuda-compute-type-design.md  2026-07-19-fast-candidates-progress-design.md  2026-07-19-grouped-karaoke-subtitles-design.md  2026-07-19-skip-outro-design.md  2026-07-20-mirror-video-layout-design.md  2026-07-20-sequential-shorts-mode-design.md  2026-07-20-single-background-track-design.md  2026-07-20-three-zone-background-video-design.md  2026-07-20-three-zone-proportions-and-music-design.md
src/movie_shorts/: __init__.py  cli.py  config.py  errors.py  models.py  pipeline.py  storage.py
src/movie_shorts/services/: __init__.py  candidates.py  media.py  music.py  renderer.py  scenes.py  scoring.py  sequential.py  subtitles.py  transcript.py
tests/: conftest.py
tests/integration/: test_cli_e2e.py  test_ffmpeg_renderer.py
tests/unit/: test_candidates.py  test_cli.py  test_config.py  test_media.py  test_music.py  test_pipeline.py  test_renderer.py  test_scenes.py  test_scoring.py  test_selection.py  test_sequential.py  test_storage.py  test_subtitles.py  test_transcript.py
