[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-shorts"
version = "0.1.0"
description = "Локальный конвейер для создания Shorts из видео"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "scenedetect[opencv]>=0.6",
    "faster-whisper>=1.0",
    "opencv-python-headless>=4.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
movie-shorts = "movie_shorts.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
